--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a href="#team">Team</a></li>
 					<li><a href="#publications">Publications</a></li>
 					<li><a href="Talks.html">Talks</a></li>
-					<li><a href="#projects">Projects</a></li>
+					<li><a href="misc.html">Projects</a></li>
 					<!-- <li><a href="events.html">BSOC</a></li> -->
 					<!-- <li><a href="#resources">Resources</a></li> -->
 					<li><a href="#contact">Contact</a></li>
@@ -67,7 +67,7 @@
 	</article>
 
 	<!-- Team -->
-	<article id="team" class="wrapper style2">
+	<article id="team" class="wrapper style1">
 		<div class="container">
 			<header>
 				<h2>Our Team</h2>
@@ -109,41 +109,139 @@
 			<div class="row aln-center">
 				<div class="col-6 col-6-medium col-12-small">
 					<h2 class="students left">Masters Students</h2>
-					<section class="box style2">
+					<section class="box style1">
 						<ul class="students left">
-							<li><a href="https://www.linkedin.com/in/san-saha/" target="_blank" rel="noopener noreferrer">Sanchita
-									Saha</a></li>
-							<li><a href="https://www.linkedin.com/in/karan-siruvuri/" target="_blank" rel="noopener noreferrer">Karan
-									Raju Siruvuri</a></li>
-							<li><a href="https://www.linkedin.com/in/devanshds/" target="_blank" rel="noopener noreferrer">Devansh
-									Shukla</a></li>
+							<li><a href="https://www.linkedin.com/in/san-saha/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Sanchita
+										Saha</span></a><br>
+								<a href="https://repository.iiitd.edu.in/jspui/handle/123456789/1351" target="_blank"
+									rel="noopener noreferrer"><span style="font-weight: bold;">Thesis:</span> Few quantum cryptanalysis
+									techniques <br>(Currently, Software Engineer at
+									Microsoft India)</a>
+							</li>
+							<li><span style="font-weight: bold;">Shanu</span><br>
+								<a href="https://repository.iiitd.edu.in/jspui/handle/123456789/634" target="_blank"
+									rel="noopener noreferrer"><span style="font-weight: bold;">Thesis:</span> Quantum
+									algorithms for distinguishing unitary operators.</a>
+							</li>
+							<li><a href="https://www.linkedin.com/in/karan-siruvuri/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Karan
+										Raju Siruvuri</span></a><br>(Currently, Software Engineer at McKinsey & Company)</li>
+							<li><a href="https://www.linkedin.com/in/devanshds/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Devansh
+										Shukla</span></a><br>(Currently, Data Scientist at Micron)</li>
 							<!-- <li><a href="" target="_blank" rel="noopener noreferrer">Shanu</a></li> -->
-							<li>Shanu</li>
-						</ul>
-					</section>
-				</div>
-				<div class="col-6 col-6-medium col-12-small">
-					<h2 class="students right">Student Interns</h2>
-					<section class="box style2">
-						<ul class="students right">
-							<li><a href="https://27rohitb.github.io/" target="_blank" rel="noopener noreferrer">Rohit Beriwal</a>
-								(currently at Oxford Quantum)</li>
-							<li><a href="https://www.linkedin.com/in/harsh-rathee/" target="_blank" rel="noopener noreferrer">Harsh
-									Rathee</a>(currently PhD at Cambridge)</li>
-							<li><a href="https://ayushidubal.github.io/" target="_blank" rel="noopener noreferrer">Ayushi Dubal</a>
-								(currently B.Tech at BITS Goa)</li>
-							<li><a href="https://www.linkedin.com/in/nakul-aggarwal/" target="_blank" rel="noopener noreferrer">Nakul
-									Agarwal</a> (currently Masters at Univ. of Alberta)</li>
-							<!-- <li><a href="" target="_blank" rel="noopener noreferrer">Harshit Garg</a></li> -->
-							<li>Harshit Garg (currently at NSIT)</li>
-							<li><a href="https://github.com/singhmeet11" target="_blank" rel="noopener noreferrer">Parmeet Singh</a>
-								(currently at DTU)</li>
-							<li><a href="https://www.linkedin.com/in/rohan-bhatia-b146a6163/" target="_blank"
-									rel="noopener noreferrer">Rohan Bhatia</a> (currently at DTU)</li>
 
 						</ul>
 					</section>
 				</div>
+				<div class="col-6 col-6-medium col-12-small">
+					<h2 class="students right">B.Techs and Interns</h2>
+					<section class="box style1">
+						<ul class="students right">
+							<li><a href="https://www.linkedin.com/in/nakul-aggarwal/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Nakul
+										Agarwal</span></a><br> (currently, PhD at Rutgers)</li>
+							<li><a href="https://27rohitb.github.io/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Rohit Beriwal</span></a><br>
+								(currently, Quantum Engineer at IQM)</li>
+							<li><a href="https://www.linkedin.com/in/harsh-rathee/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Harsh
+										Rathee</span></a><br>(currently, PhD at Cambridge University)</li>
+							<li><a href="https://ayushidubal.github.io/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Ayushi Dubal</span></a><br>
+								(currently, PhD at QUEST lab @ UW Madison)</li>
+
+							<!-- <li><a href="" target="_blank" rel="noopener noreferrer">Harshit Garg</a></li> -->
+
+							<li><a href="https://www.linkedin.com/in/parmeet-singh-1471b2211/" target="_blank"
+									rel="noopener noreferrer"><span style="font-weight: bold;">Parmeet Singh</span></a><br>
+								(currently, MSc at IIT Delhi)</li>
+							<li><a href="https://www.linkedin.com/in/rohan-bhatia-b146a6163/" target="_blank"
+									rel="noopener noreferrer"><span style="font-weight: bold;">Rohan Bhatia</span></a><br> (currently, MS
+								at
+								USC)</li>
+							<li><a href="https://www.linkedin.com/in/abhrajga/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Abhishek Rajgaria</span></a><br>
+								(currently, MSCS at University of Utah)
+							</li>
+							<li><a href="https://www.linkedin.com/in/anvit-sachdev-42b022196/" target="_blank"
+									rel="noopener noreferrer"><span style="font-weight: bold;">Anvit
+										Sachdev</span></a><br>
+								(currently, Masters at University of Texas at Austin)
+							</li>
+							<li><span style="font-weight: bold;">Harshit Garg</span> (currently at NSIT)
+							</li>
+						</ul>
+					</section>
+				</div>
+			</div>
+		</div>
+	</article>
+
+	<article id="news" class="wrapper style1">
+		<div class="container">
+			<header>
+				<h2>News</h2>
+			</header>
+			<div class="row">
+				<ul class="papers">
+					<li><span style="font-weight: bold;">February 2024: </span>Lectures on Quantum Computing and Algorithms at the
+						Quantum Computing
+						Semester at the Chennai Mathematical Institute. <br> <a
+							href="https://www.youtube.com/playlist?list=PLXbeECQLLcSidYY93p9PAbmp9iLdhMUYM" target="_blank"
+							rel="noopener noreferrer">[Youtube Link]</a>.
+						<br>
+						<ul class="papers">
+							<li><span style="font-weight: bold;">Debajyoti Bera</span> on applications of amplitude amplification,
+								Hamiltonian Simulation, DFT, QFT, QPE, Amplitude estimation, Algorithm for order finding.</li>
+							<li><span style="font-weight: bold;">Sagnik Chatterjee</span> on the Harrow Hassidim Llyod Algorithm,
+								Block Encoding, Linear Combination of Unitaries.</li>
+						</ul>
+					</li>
+					<li><span style="font-weight: bold;">January 2024: </span>Poster presented by by Sagnik Chatterjee at QIP 2024
+						on <a href="https://doi.org/10.1007/s42484-023-00122-3" target="_blank" rel="noopener noreferrer">Quantum
+							Boosting using Domain-Partitioning Hypotheses</a>.
+					</li>
+					<li><span style="font-weight: bold;">December 2023: </span>Talk by Tharrmashastha SAPV at FSTTCS 2023 on <a
+							href="https://doi.org/10.4230/LIPIcs.FSTTCS.2023.31" target="_blank" rel="noopener noreferrer">A
+							Generalized Quantum Branching Program</a>.
+					</li>
+					<li><span style="font-weight: bold;">July-September 2023:</span> Sagnik Chatterjee visited Czech Technical
+						University, Prague for Research Internship.
+					</li>
+					<li><span style="font-weight: bold;">April 2023:</span>Tharrmashastha SAPV was invited to attend the quantum
+						hackathon at ICTP, Trieste, Italy.
+					</li>
+					<li><span style="font-weight: bold;">November 2022:</span> Short talk at <a
+							href="https://quasar.unina.it/qtml2022/schedule.php" target="_blank" rel="noopener noreferrer">QTML
+							2022</a> by Sagnik Chatterjee on <a href="https://doi.org/10.1007/s42484-023-00122-3" target="_blank"
+							rel="noopener noreferrer">Quantum Boosting using
+							Domain-Partitioning Hypotheses</a>.
+					</li>
+					<li><span style="font-weight: bold;">July 2021:</span> Paper on "Error reduction of quantum algorithms"
+						accepted
+						to Physical Review A.
+					</li>
+					<li><span style="font-weight: bold;">November 2020:</span> Extended Abstract on "Applying the Quantum
+						Alternating Operator Ansatz to the Graph Matching Problem" accepted
+						to AQIS 2020.
+					</li>
+					<li><span style="font-weight: bold;">February 2020:</span> Tharrmashastha SAPV and Sagnik Chatterjee attended
+						the Workshop on "Sensitivity, Query Complexity, Communication Compl. and Fourier Analysis of Bool. Function"
+						at ISI Kolkata.
+					</li>
+					<li><span style="font-weight: bold;">January 2020:</span> Tharrmashastha SAPV, Nakul Aggarwal, and Sagnik
+						Chatterjee were part of the runners-up team for the Teach Me Quantum at IBM Quantum Awards.
+					</li>
+					<li><span style="font-weight: bold;">December 2019:</span> Sagnik Chatterjee attended the 4th Advanced CSE
+						Winter School at the Institute of Advanced Studies, Hebrew Univeristy of Jerusalem.
+					</li>
+					<li><span style="font-weight: bold;">December 2019:</span> Paper on "Efficient Quantum Algorithms Related to
+						Autocorrelation Spectrum" accepted
+						to INDOCRYPT 2019.
+					</li>
+				</ul>
 			</div>
 		</div>
 	</article>
@@ -217,172 +315,6 @@
 		</div>
 	</article>
 
-	<!-- Projects -->
-	<article id="projects" class="wrapper style2 projects">
-		<div class="container">
-			<header>
-				<h2>Projects</h2>
-			</header>
-			<div class="row aln-left">
-				<div class="col-6 col-6-medium col-12-small">
-					<section>
-						<span>
-							<ul>
-								<li><a href="https://github.com/san-saha/Quantum-ChaCha">Implementing ChaCha Stream Cipher in a Quantum
-										Simulator.</a>
-									<br>An attempt at implemeting the ChaCha stream cipher in a quantum simulator.
-								</li>
-								<li>
-									<a href="https://github.com/braqiiit/QRealBoost">Implementation of the QRealBoost Algorithm.</a><br>
-									Implemention of the QRealBoost algorithm introduced in Quantum Boosting using Domain-Partitioning
-									Hypotheses (<a href="https://arxiv.org/abs/2110.12793">arXiv:2110.12793</a>).
-								</li>
-								</li>
-								<li>
-									<a href="https://github.com/debajyotibera/nonlinearity">Quantum and Classical Nonlinearity Estimation
-										Techniques.</a> <br>
-									A C language implementation of classical and quantum tools for computing the non-linearity of a given
-									Boolean function.
-								</li>
-							</ul>
-						</span>
-					</section>
-				</div>
-				<div class="col-6 col-6-medium col-12-small no-sep-medium">
-					<section>
-						<span>
-							<ul>
-								<li>
-									<a href="https://github.com/braqiiit/QuantumStatePreparation">Implementation of Black-Box Quantum
-										State Preparation without Arithmetic.</a> <br>
-									Implementation of the quantum state preparation method intruduced in Black-Box Quantum State
-									Preparation without Arithmetic (<a
-										href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.122.020502">PhysRevLett.122.020502.</a>)
-								</li>
-								<li>
-									<a href="https://github.com/TheGupta2012/QPE-Algorithms">Implementing Quantum Phase Estimation
-										Algorithms.</a> <br>
-									A library containing some basic and novel Quantum Phase Estimation algorithms.
-								</li>
-							</ul>
-						</span>
-					</section>
-				</div>
-			</div>
-		</div>
-	</article>
-
-	<!-- Resources -->
-	<article id="resources" class="wrapper style1">
-		<div class="container">
-			<header>
-				<h2>Useful Resources</h2>
-			</header>
-			<div class="row aln-left">
-				<div class="col-6 col-6-medium col-12-small">
-					<section>
-						<h3>Online Resources</h3>
-						<span>
-							<ul>
-								<li><a href="https://qiskit.org/textbook/">Qiskit Textbook</a> <br> An interactive online textbook for
-									an introduction to quantum computing and programming.</li>
-								<li>
-									<a href="https://quantum.country/">Quantum Country </a> <br>
-									A very descriptive but limited introduction to the basics of quantum computing.
-								</li>
-								<li>
-									<a href="https://quantumalgorithmzoo.org/">Quantum Algorithm Zoo</a> <br>
-									An assortment of important quantum algorithms, all in one place.
-								</li>
-								<li>
-									<a href="https://quantumalgorithms.org/">Quantum Algorithms for Data Analysis</a> <br />
-									A collection of the state-of-the-art quantum algorithms.
-								</li>
-							</ul>
-						</span>
-					</section>
-				</div>
-				<div class="col-6 col-6-medium col-12-small no-sep-medium">
-					<section>
-						<h3>Text Books</h3>
-						<span>
-							<ul>
-								<li>
-									<a href="https://doi.org/10.1017/CBO9780511813887">Quantum Computing for Computer Scientists by
-										Yanofsky and Mannucci</a>
-									<br>
-									Basic introduction to QC from a more computer science perspective.
-								</li>
-								<li>
-									<a href="http://www.thomaswong.net/introduction-to-classical-and-quantum-computing-1e3p.pdf">Introduction
-										to Classical and Quantum Computing by Thomas Wong</a>
-									<br>
-									Focuses on the basics of QC, tools like linear algebra and how to connect them.
-								</li>
-								<li>
-									<a href="http://csis.pace.edu/~ctappert/cs837-19spring/QC-textbook.pdf">Quantum Computation and
-										Quantum Information by Neilson and Chuang</a>
-									<br>
-									The Bible of Quantum Computing. Needs knowledge of some linear algebra.
-								</li>
-								<li>
-									<a href="http://ursula.chem.yale.edu/~batista/classes/v572/Mosca.pdf">An Introduction to Quantum
-										Computing by Kaye, Laflamme and Mosca (Advanced)</a>
-									<br>
-									Expected to be read after some familiarity with the basics of QC and linear algebra.
-								</li>
-							</ul>
-						</span>
-					</section>
-				</div>
-				<div class="col-6 col-6-medium col-12-small">
-					<section>
-						<h3>Video Resources</h3>
-						<span>
-							<ul>
-								<li>
-									<a href="https://www.youtube.com/c/qiskit">Qiskit YouTube channel</a>
-								</li>
-								<li>
-									<a href="https://youtube.com/playlist?list=PLm3J0oaFux3YL5qLskC6xQ24JpMwOAeJz">Ryan O'Donnell's Video
-										Lectures on Quantum Computing</a>
-								</li>
-								<li>
-									<a href="https://www.youtube.com/playlist?list=PLmRxgFnCIhaMgvot-Xuym_hn69lmzIokg">Peter Wittek's
-										Video Lectures on Quantum Machine Learning</a>
-								</li>
-								<li>
-									<a href="https://youtube.com/playlist?list=PLZGjbQcY0aI4PB63hH_RnfnJSfNK1OojC">Sevag Gharibian's Video
-										Lectures on Introduction to Quantum Computing (Advanced)</a>
-								</li>
-							</ul>
-						</span>
-					</section>
-				</div>
-				<div class="col-6 col-6-medium col-12-small no-sep no-sep-medium">
-					<section>
-						<h3>Some Fun Reads</h3>
-						<span>
-							<ul>
-								<li>
-									<a href="https://blog.qutech.nl/">Bits of Quantum</a>
-								</li>
-								<li>
-									<a href="https://decodoku.medium.com/">Decodoku</a>
-								</li>
-								<li>
-									<a href="https://scottaaronson.blog/">Shtetl Optimized</a>
-								</li>
-								<li>
-									<a href="https://www.mustythoughts.com/">Musty Thoughts</a>
-								</li>
-							</ul>
-						</span>
-					</section>
-				</div>
-			</div>
-		</div>
-	</article>
 
 	<!-- Contact -->
 	<article id="contact" class="wrapper style4">
