--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<li><a href="#top">Home</a></li>
 					<li><a href="#team">Team</a></li>
 					<li><a href="#publications">Publications</a></li>
+					<li><a href="#news">News</a></li>
 					<li><a href="Talks.html">Talks</a></li>
 					<li><a href="misc.html">Projects</a></li>
 					<!-- <li><a href="events.html">BSOC</a></li> -->
