Fix formatting of heading

--- a/index.html
+++ b/index.html
@@ -53,15 +53,19 @@
 				<div class="col-4 col-5-large col-12-medium">
 					<span class="image fit"><img src="images/braqiiit.png" alt="" /></span>
 				</div>
-				<div class="col-8 col-7-large col-12-medium">
+				<div class="col-8 col-7-large col-12-medium" style="text-align:right">
 					<header>
 						<h1>BraQIIIT</h1>
 					</header>
 					<p>The Quantum Lab at IIIT-Delhi.</p>
-					<p>BraQIIIT is a research group led by Dr. Debajyoti Bera at the Computer Science department of Indraprastha
-						Institute of Information Technology, Delhi (IIIT-Delhi). Broad research interests of this group include
-						quantum query complexity, quantum circuit complexity, and quantum algorithms for cryptography, machine
-						learning and optimization.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div>
+					<p style="text-align:justify">BraQIIIT is a research group led by Dr. Debajyoti Bera at the Computer Science department of Indraprastha
+					Institute of Information Technology, Delhi (IIIT-Delhi). Broad research interests of this group include
+					quantum query complexity, quantum circuit complexity, and quantum algorithms for cryptography, machine
+					learning and optimization.</p>
 				</div>
 			</div>
 		</div>
