--- a/Talks.html
+++ b/Talks.html
@@ -253,10 +253,11 @@
           <td data-label="Date">March 15, 2024 <br> 8:00 PM IST</td>
 
           <td data-label="Resources">
+            <a href="https://drive.google.com/file/d/1sFHo4_OInG-O7I3J69kl1vonVxo6u3UL/view?usp=sharing" target="_blank"
+              rel="noopener noreferrer">Video</a>,
+            <a href="images/Preetham Talk Flyer.pdf" target="_blank" rel="noopener noreferrer">Poster</a>,
             <a href="https://arxiv.org/abs/2302.07409" target="_blank" rel="noopener noreferrer">Paper</a>
-            <br>
-            <span style="font-weight: 600">Google Meet
-              Code</span>: hkk-tias-vbe
+
           </td>
         </tr>
         <tr>
@@ -266,7 +267,10 @@
           <td data-label="Date">TBA</td>
 
           <td data-label="Resources"> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ITCS.2024.20"
-              target="_blank" rel="noopener noreferrer">Paper</a></td>
+              target="_blank" rel="noopener noreferrer">Paper</a>
+            <br>
+            <span style="font-weight: 600">Google Meet Code</span>: hkk-tias-vbe
+          </td>
         </tr>
         <tr>
           <td data-label="Speaker">Mahathi Vempathi (QuICS, University of Maryland)</td>
