--- a/Talks.html
+++ b/Talks.html
@@ -283,6 +283,16 @@
               href="https://quics.umd.edu/events/total-functions-exhibit-exponential-quantum-advantage-%E2%80%94-albeit-parallel-universe"
               target="_blank" rel="noopener noreferrer">Abstract</a></td>
         </tr>
+        <tr>
+          <td data-label="Speaker">Kunal Marwaha (University of Chicago)</td>
+          <td data-label="Title">Superposition detection and QMA with non-collapsing measurements
+          </td>
+
+          <td data-label="Date">TBA</td>
+
+          <td data-label="Resources"> <a href="https://arxiv.org/abs/2403.02532" target="_blank"
+              rel="noopener noreferrer">Paper</a></td>
+        </tr>
       </tbody>
     </table>
   </div>
