updated antonio talk

--- a/Talks.html
+++ b/Talks.html
@@ -293,6 +293,16 @@
           <td data-label="Resources"> <a href="https://arxiv.org/abs/2403.02532" target="_blank"
               rel="noopener noreferrer">Paper</a></td>
         </tr>
+        <tr>
+          <td data-label="Speaker">Antonio Anna Mele (Freie Universitat Berlin)</td>
+          <td data-label="Title">Noise-induced shallow circuits and absence of barren plateaus
+          </td>
+
+          <td data-label="Date">TBA</td>
+
+          <td data-label="Resources"> <a href="https://arxiv.org/abs/2403.13927" target="_blank"
+              rel="noopener noreferrer">Paper</a></td>
+        </tr>
       </tbody>
     </table>
   </div>
