--- a/Talks.html
+++ b/Talks.html
@@ -264,7 +264,7 @@
           <td data-label="Speaker">Itai Leigh (Tel Aviv University)</td>
           <td data-label="Title">Discreteness of Asymptotic Tensor Ranks</td>
 
-          <td data-label="Date">TBA</td>
+          <td data-label="Date">March 29, 2024 <br> 8:00 PM IST</td>
 
           <td data-label="Resources"> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ITCS.2024.20"
               target="_blank" rel="noopener noreferrer">Paper</a>
