--- a/Talks.html
+++ b/Talks.html
@@ -264,10 +264,12 @@
           <td data-label="Speaker">Itai Leigh (Tel Aviv University)</td>
           <td data-label="Title">Discreteness of Asymptotic Tensor Ranks</td>
 
-          <td data-label="Date">March 29, 2024 <br> 8:00 PM IST</td>
+          <td data-label="Date">April 3, 2024 <br> 8:00 PM IST</td>
 
-          <td data-label="Resources"> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ITCS.2024.20"
-              target="_blank" rel="noopener noreferrer">Paper</a>
+          <td data-label="Resources">
+            <a href="images/Itai Talk Flyer.pdf" target="_blank" rel="noopener noreferrer">Poster</a>,
+            <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ITCS.2024.20" target="_blank"
+              rel="noopener noreferrer">Paper</a>
             <br>
             <span style="font-weight: 600">Google Meet Code</span>: hkk-tias-vbe
           </td>
@@ -277,11 +279,13 @@
           <td data-label="Title">Total functions exhibit exponential quantum advantage — albeit in a parallel universe
           </td>
 
-          <td data-label="Date">TBA</td>
+          <td data-label="Date">April 8, 2024 <br> 8:00 PM IST</td>
 
-          <td data-label="Resources"> <a
-              href="https://quics.umd.edu/events/total-functions-exhibit-exponential-quantum-advantage-%E2%80%94-albeit-parallel-universe"
-              target="_blank" rel="noopener noreferrer">Abstract</a></td>
+          <td data-label="Resources">
+            <a href="images/Mahathi Talk Flyer.pdf" target="_blank" rel="noopener noreferrer">Poster</a>,
+            <a href="https://quics.umd.edu/events/total-functions-exhibit-exponential-quantum-advantage-%E2%80%94-albeit-parallel-universe"
+              target="_blank" rel="noopener noreferrer">Abstract</a>
+          </td>
         </tr>
         <tr>
           <td data-label="Speaker">Kunal Marwaha (University of Chicago)</td>
@@ -298,10 +302,12 @@
           <td data-label="Title">Noise-induced shallow circuits and absence of barren plateaus
           </td>
 
-          <td data-label="Date">TBA</td>
+          <td data-label="Date">April 25, 2024 <br> 8:00 PM IST</td>
 
-          <td data-label="Resources"> <a href="https://arxiv.org/abs/2403.13927" target="_blank"
-              rel="noopener noreferrer">Paper</a></td>
+          <td data-label="Resources">
+            <a href="images/Antonio Talk Flyer.pdf" target="_blank" rel="noopener noreferrer">Poster</a>,
+            <a href="https://arxiv.org/abs/2403.13927" target="_blank" rel="noopener noreferrer">Paper</a>
+          </td>
         </tr>
       </tbody>
     </table>
