Update Harsh's Uni

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								(currently, Quantum Engineer at IQM)</li>
 							<li><a href="https://www.linkedin.com/in/harsh-rathee/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Harsh
-										Rathee</span></a><br>(currently, PhD at Cambridge University)</li>
+										Rathee</span></a><br>(currently, PhD at Imperial College London)</li>
 							<li><a href="https://ayushidubal.github.io/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Ayushi Dubal</span></a><br>
 								(currently, PhD at QUEST lab @ UW Madison)</li>
