--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
 			</div>
 			<div class="row">
 				<div>
-					<p style="text-align:justify">BraQIIIT is a research group led by Dr. Debajyoti Bera at the Computer Science department of Indraprastha
-					Institute of Information Technology, Delhi (IIIT-Delhi). Broad research interests of this group include
-					quantum query complexity, quantum circuit complexity, and quantum algorithms for cryptography, machine
-					learning and optimization.</p>
+					<p style="text-align:justify">BraQIIIT is a research group led by Dr. Debajyoti Bera at the Computer Science
+						department of Indraprastha
+						Institute of Information Technology, Delhi (IIIT-Delhi). Broad research interests of this group include
+						quantum query complexity, quantum circuit complexity, and quantum algorithms for cryptography, machine
+						learning and optimization.</p>
 				</div>
 			</div>
 		</div>
@@ -77,8 +78,11 @@
 			<header>
 				<h2>Our Team</h2>
 			</header>
+
 			<h2>Advisor</h2>
-			<div class="row aln-center">
+
+			<div class="row aln-center" style="background-color: antiquewhite;margin: 12px;">
+
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><a href="http://faculty.iiitd.ac.in/~dbera/" target="_blank"
@@ -89,8 +93,8 @@
 				</div>
 			</div>
 			<h2>Doctoral Students</h2>
-			<div class="row aln-center">
-				<div class="col-4 col-6-medium col-12-small">
+			<div class="row aln-center" style="background-color: azure; margin: 10px;">
+				<div class="col-5 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><a href="https://chatsagnik.github.io/" target="_blank"
 								rel="noopener noreferrer"><img src="images/sagnik.jpg" alt="" /></a></span>
@@ -100,83 +104,146 @@
 						<h4>Quantum Learning Theory</h4>
 					</section>
 				</div>
-				<div class="col-4 col-6-medium col-12-small">
+				<div class="col-5 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><a href="https://sites.google.com/iiitd.ac.in/
-									tharrma" target="_blank" rel="noopener noreferrer"><img src="images/tharrma.jpg" alt="" /></a></span>
+													tharrma" target="_blank" rel="noopener noreferrer"><img src="images/tharrma.jpg" alt="" /></a></span>
 						<h3><a href="https://sites.google.com/iiitd.ac.in/
 									tharrma" target="_blank" rel="noopener noreferrer">Tharrmashastha SAPV</a></h3>
 						<!-- <h4>4<sup>th</sup> Year</h4> -->
 						<h4>Quantum Algorithms & Query Complexity</h4>
 					</section>
 				</div>
+				<div class="col-5 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="image fit"><a href="https://www.linkedin.com/in/santanu-majhi-91a0b119a/?originalSubdomain=in"
+								target="_blank" rel="noopener noreferrer"><img src="images/santanu.jpg" alt="" /></a></span>
+						<h3><a href="https://sites.google.com/iiitd.ac.in/
+																	tharrma" target="_blank" rel="noopener noreferrer">Santanu Majhi</a></h3>
+						<!-- <h4>4<sup>th</sup> Year</h4> -->
+						(co-advised by <a href="https://www.isical.ac.in/~goutam.paul/" target="_blank"
+							rel="noopener noreferrer">Dr. Goutam
+							Paul</a>)
+						<h4>Quantum Information Theory</h4>
+
+					</section>
+				</div>
+				<div class="col-5 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="image fit"><a href="https://www.linkedin.com/in/saurav-awasthi-aa11b8302/" target="_blank"
+								rel="noopener noreferrer"><img src="images/saurav.jpg" alt="" /></a></span>
+						<h3><a href="https://sites.google.com/iiitd.ac.in/
+													tharrma" target="_blank" rel="noopener noreferrer">Saurav Awasthi</a></h3>
+						<!-- <h4>4<sup>th</sup> Year</h4> -->
+						(co-advised by <a href="https://bapi.github.io/" target="_blank" rel="noopener noreferrer">Dr. Bapi
+							Chatterjee</a>)
+						<h4>Quantum Machine Learning</h4>
+
+					</section>
+				</div>
 			</div>
 			<div class="row aln-center">
 				<div class="col-6 col-6-medium col-12-small">
 					<h2 class="students left">Masters Students</h2>
-					<section class="box style1">
+					<section class="box style1" style="background-color: beige;">
+						<h3>Current</h3> <br>
+						<ul class=" students left">
+							<li><a href="https://www.linkedin.com/in/sejal-sarada-88ab96204/?originalSubdomain=in" target="_blank"
+									rel="noopener noreferrer"><span style="font-weight: bold;">Sejal Sarada</span></a></li>
+						</ul>
+						<h3>Graduated</h3> <br>
 						<ul class="students left">
 							<li><a href="https://www.linkedin.com/in/san-saha/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Sanchita
 										Saha</span></a><br>
-								<a href="https://repository.iiitd.edu.in/jspui/handle/123456789/1351" target="_blank"
-									rel="noopener noreferrer"><span style="font-weight: bold;">Thesis:</span> Few quantum cryptanalysis
-									techniques <br>(Currently, Software Engineer at
-									Microsoft India)</a>
+								<span style="font-size:smaller;">
+									<a href="https://repository.iiitd.edu.in/jspui/handle/123456789/1351" target="_blank"
+										rel="noopener noreferrer"><span style="font-weight: bold; color: steelblue;">Thesis:</span> Few
+										quantum
+										cryptanalysis
+										techniques <br>
+										<span style="font-weight: bold; color: steelblue;">Currently:</span> Software Engineer at
+										Microsoft India.</a></span>
 							</li>
 							<li><span style="font-weight: bold;">Shanu</span><br>
-								<a href="https://repository.iiitd.edu.in/jspui/handle/123456789/634" target="_blank"
-									rel="noopener noreferrer"><span style="font-weight: bold;">Thesis:</span> Quantum
-									algorithms for distinguishing unitary operators.</a>
+								<span style="font-size:smaller;">
+									<a href="https://repository.iiitd.edu.in/jspui/handle/123456789/634" target="_blank"
+										rel="noopener noreferrer"><span style="font-weight: bold;color: steelblue;">Thesis:</span> Quantum
+										algorithms for distinguishing unitary operators.</a></span>
 							</li>
 							<li><a href="https://www.linkedin.com/in/karan-siruvuri/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Karan
-										Raju Siruvuri</span></a><br>(Currently, Software Engineer at McKinsey & Company)</li>
+										Raju Siruvuri</span></a><br><span style="font-size:smaller;"><span
+										style="font-weight: bold; color: steelblue;">Currently:</span>
+									Software Engineer at McKinsey & Company.</span></li>
 							<li><a href="https://www.linkedin.com/in/devanshds/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Devansh
-										Shukla</span></a><br>(Currently, Data Scientist at Micron)</li>
+										Shukla</span></a><br><span style="font-size:smaller;"><span
+										style="font-weight: bold; color: steelblue;">Currently:</span> Data
+									Scientist at Micron</span></li>
 							<!-- <li><a href="" target="_blank" rel="noopener noreferrer">Shanu</a></li> -->
 
 						</ul>
 					</section>
 				</div>
 				<div class="col-6 col-6-medium col-12-small">
-					<h2 class="students right">B.Techs and Interns</h2>
-					<section class="box style1">
+					<h2 class="students right">R.A.'s and Undergrads</h2>
+					<section class="box style1" style="background-color:cornsilk">
+						<h3>Current</h3> <br>
+						<ul class=" students right">
+							<li><a href="https://www.linkedin.com/in/yash-saxena-872200105/?originalSubdomain=in" target="_blank"
+									rel="noopener noreferrer"><span style="font-weight: bold;">Yash Saxena</span></a><br></li>
+						</ul>
+						<h3>Past / Graduated</h3>
 						<ul class="students right">
 							<li><a href="https://www.linkedin.com/in/nakul-aggarwal/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Nakul
-										Agarwal</span></a><br> (currently, PhD at Rutgers)</li>
+										Agarwal</span></a><br> <span style="font-size:smaller;"><span
+										style="font-weight: bold; color: steelblue;">Currently:</span> PhD at Rutgers</span></li>
 							<li><a href="https://27rohitb.github.io/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Rohit Beriwal</span></a><br>
-								(currently, Quantum Engineer at IQM)</li>
+								<span style="font-size:smaller;"><span style="font-weight: bold; color: steelblue;">Currently:</span>
+									Quantum Engineer at IQM</span>
+							</li>
 							<li><a href="https://www.linkedin.com/in/harsh-rathee/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Harsh
-										Rathee</span></a><br>(currently, PhD at Imperial College London)</li>
+										Rathee</span></a><br><span style="font-size:smaller;"><span
+										style="font-weight: bold; color: steelblue;">Currently:</span> PhD at Imperial College London</span>
+							</li>
 							<li><a href="https://ayushidubal.github.io/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Ayushi Dubal</span></a><br>
-								(currently, PhD at QUEST lab @ UW Madison)</li>
+								<span style="font-size:smaller;"><span style="font-weight: bold; color: steelblue;">Currently:</span>
+									PhD at QUEST lab @ UW Madison</span>
+							</li>
 
 							<!-- <li><a href="" target="_blank" rel="noopener noreferrer">Harshit Garg</a></li> -->
 
 							<li><a href="https://www.linkedin.com/in/parmeet-singh-1471b2211/" target="_blank"
 									rel="noopener noreferrer"><span style="font-weight: bold;">Parmeet Singh</span></a><br>
-								(currently, MSc at IIT Delhi)</li>
+								<span style="font-size:smaller;"><span style="font-weight: bold; color: steelblue;">Currently:</span>
+									MSc at IIT Delhi</span>
+							</li>
 							<li><a href="https://www.linkedin.com/in/rohan-bhatia-b146a6163/" target="_blank"
-									rel="noopener noreferrer"><span style="font-weight: bold;">Rohan Bhatia</span></a><br> (currently, MS
-								at
-								USC)</li>
+									rel="noopener noreferrer"><span style="font-weight: bold;">Rohan Bhatia</span></a><br>
+								<span style="font-size:smaller;"><span style="font-weight: bold; color: steelblue;">Currently:</span>MS
+									at
+									USC</span>
+							</li>
 							<li><a href="https://www.linkedin.com/in/abhrajga/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Abhishek Rajgaria</span></a><br>
-								(currently, MSCS at University of Utah)
+								<span style="font-size:smaller;"><span style="font-weight: bold; color: steelblue;">Currently:</span>
+									MSCS at University of Utah</span>
 							</li>
 							<li><a href="https://www.linkedin.com/in/anvit-sachdev-42b022196/" target="_blank"
 									rel="noopener noreferrer"><span style="font-weight: bold;">Anvit
 										Sachdev</span></a><br>
-								(currently, Masters at University of Texas at Austin)
+								<span style="font-size:smaller;"><span style="font-weight: bold; color: steelblue;">Currently:</span>
+									Masters at University of Texas at Austin</span>
 							</li>
-							<li><span style="font-weight: bold;">Harshit Garg</span> (currently at NSIT)
-							</li>
+
+							<!-- <li><span style="font-weight: bold;">Harshit Garg</span> <span style="font-size:smaller;"><span
+										style="font-weight: bold; color: steelblue;">Currently:</span> NSIT</span>
+							</li> -->
 						</ul>
 					</section>
 				</div>
@@ -191,6 +258,17 @@
 			</header>
 			<div class="row">
 				<ul class="papers">
+					<li><span style="font-weight: bold;">June 2024: </span>Talk by Sagnik Chatterjee at the Recent Trends in
+						Algorithms (2024) workshop on our AISTATS paper.
+					</li>
+					<li><span style="font-weight: bold;">June 2024: </span>Talk by Sagnik Chatterjee at the ACMU seminar in ISI
+						Kolkata on our AISTATS paper.
+					</li>
+					<li><span style="font-weight: bold;">May 2024: </span><a
+							href="https://proceedings.mlr.press/v238/chatterjee24a.html" target="_blank"
+							rel="noopener noreferrer">Efficient
+							Quantum Agnostic Improper Learning of Decision Trees</a> presented by Sagnik Chatterjee at AISTATS 2024.
+					</li>
 					<li><span style="font-weight: bold;">February 2024: </span>Lectures on Quantum Computing and Algorithms at the
 						Quantum Computing
 						Semester at the Chennai Mathematical Institute. <br> <a
@@ -205,8 +283,9 @@
 						</ul>
 					</li>
 					<li><span style="font-weight: bold;">January 2024: </span>Poster presented by by Sagnik Chatterjee at QIP 2024
-						on <a href="https://doi.org/10.1007/s42484-023-00122-3" target="_blank" rel="noopener noreferrer">Quantum
-							Boosting using Domain-Partitioning Hypotheses</a>.
+						on <a href="https://proceedings.mlr.press/v238/chatterjee24a.html" target="_blank"
+							rel="noopener noreferrer">Efficient
+							Quantum Agnostic Improper Learning of Decision Trees.</a>.
 					</li>
 					<li><span style="font-weight: bold;">December 2023: </span>Talk by Tharrmashastha SAPV at FSTTCS 2023 on <a
 							href="https://doi.org/10.4230/LIPIcs.FSTTCS.2023.31" target="_blank" rel="noopener noreferrer">A
@@ -260,9 +339,9 @@
 			<div class="row">
 				<ul class="papers">
 					<li><span style="font-weight: bold;">Efficient Quantum Agnostic Improper Learning of Decision Trees</span>.
-						<br> Sagnik Chatterjee, Tharrmashastha SAPV, and Debajyoti Bera. <span style="font-weight: bold;">AISTATS
-							2024</span>.
-						<a href="https://arxiv.org/abs/2210.00212" target="_blank" rel="noopener noreferrer">arXiv preprint</a>.
+						<br> Sagnik Chatterjee, Tharrmashastha SAPV, and Debajyoti Bera. <a
+							href="https://proceedings.mlr.press/v238/chatterjee24a.html" target="_blank"
+							rel="noopener noreferrer">AISTATS 2024</a>.
 					</li>
 					<li><span style="font-weight: bold;">A Generalized Quantum Branching Program.</span>
 						<br> Debajyoti Bera,
