--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
 				<ul class="container">
 					<li><a href="#top">Home</a></li>
 					<li><a href="#team">Team</a></li>
-					<li><a href="#publications">Publications</a></li>
 					<li><a href="#news">News</a></li>
-					<li><a href="Talks.html">Talks</a></li>
-					<li><a href="misc.html">Projects</a></li>
-					<!-- <li><a href="events.html">BSOC</a></li> -->
-					<!-- <li><a href="#resources">Resources</a></li> -->
+					<li><a href="#publications">Publications</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="Talks.html">TQC 2024</a></li>
 					<li><a href="https://twitter.com/BQiiit" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 					</li>
 					<li><a href="https://github.com/braqiiit" class="icon brands fa-github"><span class="label">Github</span></a>
@@ -241,9 +238,10 @@
 									Masters at University of Texas at Austin</span>
 							</li>
 
-							<!-- <li><span style="font-weight: bold;">Harshit Garg</span> <span style="font-size:smaller;"><span
-										style="font-weight: bold; color: steelblue;">Currently:</span> NSIT</span>
-							</li> -->
+							<li><a href="https://www.linkedin.com/in/thegupta2012/" target="_blank" rel="noopener noreferrer"><span
+										style="font-weight: bold;">Harshit Gupta</span></a> <br> <span style="font-size:smaller;"><span
+										style="font-weight: bold; color: steelblue;">Currently:</span> Software Engineer at Visa.</span>
+							</li>
 						</ul>
 					</section>
 				</div>
@@ -338,6 +336,19 @@
 			</header>
 			<div class="row">
 				<ul class="papers">
+					<li><span style="font-weight: bold;">Quantum Query-Space Lower Bounds Using Branching Programs</span>.
+						<br> Debajyoti Bera and Tharrmashastha SAPV. <a href="https://arxiv.org/abs/2407.06872" target="_blank"
+							rel="noopener noreferrer">arXiv prepint</a> (2024).
+					</li>
+					<li><span style="font-weight: bold;">Thin-wall monopoles in a false vacuum</span>.
+						<br> Manu B. Paranjape, and Yash Saxena. <a href="doi:10.1103/PhysRevD.110.025005" target="_blank"
+							rel="noopener noreferrer">Physical Review D</a>.
+					</li>
+					<li><span style="font-weight: bold;">Generalization Bounds for Dependent Data using Online-to-Batch
+							Conversion</span>.
+						<br> Sagnik Chatterjee, Manuj Mukherjee, and Alhad Sethi. <a href="https://arxiv.org/abs/2405.13666"
+							target="_blank" rel="noopener noreferrer">arXiv prepint</a> (2024).
+					</li>
 					<li><span style="font-weight: bold;">Efficient Quantum Agnostic Improper Learning of Decision Trees</span>.
 						<br> Sagnik Chatterjee, Tharrmashastha SAPV, and Debajyoti Bera. <a
 							href="https://proceedings.mlr.press/v238/chatterjee24a.html" target="_blank"
