updated prd submission

--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
 							rel="noopener noreferrer">arXiv prepint</a> (2024).
 					</li>
 					<li><span style="font-weight: bold;">Thin-wall monopoles in a false vacuum</span>.
-						<br> Manu B. Paranjape, and Yash Saxena. <a href="doi:10.1103/PhysRevD.110.025005" target="_blank"
+						<br> Manu B. Paranjape, and Yash Saxena. <a
+							href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.110.025005" target="_blank"
 							rel="noopener noreferrer">Physical Review D</a>.
 					</li>
 					<li><span style="font-weight: bold;">Generalization Bounds for Dependent Data using Online-to-Batch
