Sejal has graduated!

--- a/index.html
+++ b/index.html
@@ -146,10 +146,19 @@
 						<h3>Current</h3> <br>
 						<ul class=" students left">
 							<li><a href="https://www.linkedin.com/in/sejal-sarada-88ab96204/?originalSubdomain=in" target="_blank"
-									rel="noopener noreferrer"><span style="font-weight: bold;">Sejal Sarada</span></a></li>
+									rel="noopener noreferrer"><span style="font-weight: bold;">Davinder Singh</span></a></li>
 						</ul>
 						<h3>Graduated</h3> <br>
 						<ul class="students left">
+							<li><a href="https://www.linkedin.com/in/san-saha/" target="_blank" rel="noopener noreferrer"><span
+								style="font-weight: bold;">Sejal Sarada/span></a><br>
+						<span style="font-size:smaller;">
+							<a href="#" target="_blank"
+								rel="noopener noreferrer"><span style="font-weight: bold; color: steelblue;">Thesis:</span> Universal Dataset Encoder: A Generalized
+								VQC Approach to Approximate Encoding<br>
+								<!--<span style="font-weight: bold; color: steelblue;">Currently:</span> Software Engineer at
+								Microsoft India.</a></span>-->
+					</li>
 							<li><a href="https://www.linkedin.com/in/san-saha/" target="_blank" rel="noopener noreferrer"><span
 										style="font-weight: bold;">Sanchita
 										Saha</span></a><br>
