Add Davinder in the MTech section

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
 					<section class="box style1" style="background-color: beige;">
 						<h3>Current</h3> <br>
 						<ul class=" students left">
-							<li><a href="https://www.linkedin.com/in/sejal-sarada-88ab96204/?originalSubdomain=in" target="_blank"
+							<li><a href="https://www.linkedin.com/in/dvendator/?originalSubdomain=in" target="_blank"
 									rel="noopener noreferrer"><span style="font-weight: bold;">Davinder Singh</span></a></li>
 						</ul>
 						<h3>Graduated</h3> <br>
 						<ul class="students left">
-							<li><a href="https://www.linkedin.com/in/san-saha/" target="_blank" rel="noopener noreferrer"><span
-								style="font-weight: bold;">Sejal Sarada/span></a><br>
+							<li><a href="https://www.linkedin.com/in/sejal-sarada-88ab96204/?originalSubdomain=in" target="_blank" rel="noopener noreferrer"><span
+								style="font-weight: bold;">Sejal Sarada</span></a><br>
 						<span style="font-size:smaller;">
 							<a href="#" target="_blank"
 								rel="noopener noreferrer"><span style="font-weight: bold; color: steelblue;">Thesis:</span> Universal Dataset Encoder: A Generalized
