--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 					<section class="box style1">
 						<span class="image fit"><a href="https://www.linkedin.com/in/santanu-majhi-91a0b119a/?originalSubdomain=in"
 								target="_blank" rel="noopener noreferrer"><img src="images/santanu.jpg" alt="" /></a></span>
-						<h3><a href="https://sites.google.com/iiitd.ac.in/
-																	tharrma" target="_blank" rel="noopener noreferrer">Santanu Majhi</a></h3>
+						<h3><a href="https://www.linkedin.com/in/santanu-majhi-91a0b119a" target="_blank" 
+							    rel="noopener noreferrer">Santanu Majhi</a></h3>
 						<!-- <h4>4<sup>th</sup> Year</h4> -->
 						(co-advised by <a href="https://www.isical.ac.in/~goutam.paul/" target="_blank"
 							rel="noopener noreferrer">Dr. Goutam
@@ -129,8 +129,7 @@
 					<section class="box style1">
 						<span class="image fit"><a href="https://www.linkedin.com/in/saurav-awasthi-aa11b8302/" target="_blank"
 								rel="noopener noreferrer"><img src="images/saurav.jpg" alt="" /></a></span>
-						<h3><a href="https://sites.google.com/iiitd.ac.in/
-													tharrma" target="_blank" rel="noopener noreferrer">Saurav Awasthi</a></h3>
+						<h3><a href="https://www.linkedin.com/in/saurav-awasthi-aa11b8302/" target="_blank" rel="noopener noreferrer">Saurav Awasthi</a></h3>
 						<!-- <h4>4<sup>th</sup> Year</h4> -->
 						(co-advised by <a href="https://bapi.github.io/" target="_blank" rel="noopener noreferrer">Dr. Bapi
 							Chatterjee</a>)
@@ -265,6 +264,28 @@
 			</header>
 			<div class="row">
 				<ul class="papers">
+					<li><span style="font-weight: bold;">April 2025: </span>Session on Introduction to Quantum Computing
+						and Qiskit by Tharrmashastha SAPV at Academic Exchange and Student Conference on Advancement 
+						in Physics(AESCAP), Delhi Technological University(DTU) and Deen Dayal Upadhyaya College(DDUC).
+					</li>
+					<li><span style="font-weight: bold;">March 2025: </span>Workshop on Quantum Computing Mastery: 
+						Theory and Practical Insights by Sagnik Chatterjee and Tharrmashastha SAPV at IIT-Delhi.
+					</li>
+					<li><span style="font-weight: bold;">March 2025: </span>Realization of a high-fidelity generalized CNOT 
+						in a three-level system presented by Tharrmashastha SAPV at the APS March Meeting 2025.
+					</li>
+					<li><span style="font-weight: bold;">January 2025: </span>Poster on ><a
+							href="https://drive.google.com/file/d/10tU4rK2ggbF9XKFFZXzBHW95FsYiPg1A/view" target="_blank"
+							rel="noopener noreferrer">Efficient
+							Thin-wall monopoles in a false vacuum.</a> presented by Yash Saxena at STRINGS 2025, NYU Abu Dhabi.
+					</li>
+					<li><span style="font-weight: bold;">January 2025: </span>Paper titled href="https://arxiv.org/abs/2405.13666" 
+						target="_blank" rel="noopener noreferrer">Generalization Bounds for Dependent Data 
+						using Online-to-Batch Conversion</a>by Sagnik Chatterjee was accepted at AISTATS'25.
+					</li>
+					<li><span style="font-weight: bold;">Aug - Oct 2024: </span>Sagnik Chatterjee visited Prof. Sourav Chakraborty 
+						at ISI, Kolkata as a research intern.
+					</li>
 					<li><span style="font-weight: bold;">June 2024: </span>Talk by Sagnik Chatterjee at the Recent Trends in
 						Algorithms (2024) workshop on our AISTATS paper.
 					</li>
