Fixed a couple of typos in the latest update

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 				<ul class="papers">
 					<li><span style="font-weight: bold;">April 2025: </span>Session on Introduction to Quantum Computing
 						and Qiskit by Tharrmashastha SAPV at Academic Exchange and Student Conference on Advancement 
-						in Physics(AESCAP), Delhi Technological University(DTU) and Deen Dayal Upadhyaya College(DDUC).
+						in Physics (AESCAP) 2025, Delhi Technological University (DTU) and Deen Dayal Upadhyaya College (DDUC).
 					</li>
 					<li><span style="font-weight: bold;">March 2025: </span>Workshop on Quantum Computing Mastery: 
 						Theory and Practical Insights by Sagnik Chatterjee and Tharrmashastha SAPV at IIT-Delhi.
@@ -274,17 +274,17 @@
 					<li><span style="font-weight: bold;">March 2025: </span>Realization of a high-fidelity generalized CNOT 
 						in a three-level system presented by Tharrmashastha SAPV at the APS March Meeting 2025.
 					</li>
-					<li><span style="font-weight: bold;">January 2025: </span>Poster on ><a
+					<li><span style="font-weight: bold;">January 2025: </span>Poster on <a
 							href="https://drive.google.com/file/d/10tU4rK2ggbF9XKFFZXzBHW95FsYiPg1A/view" target="_blank"
-							rel="noopener noreferrer">Efficient
-							Thin-wall monopoles in a false vacuum.</a> presented by Yash Saxena at STRINGS 2025, NYU Abu Dhabi.
+							rel="noopener noreferrer">Thin-wall monopoles in a false vacuum.</a> presented by Yash Saxena 
+						at STRINGS 2025, NYU Abu Dhabi.
 					</li>
-					<li><span style="font-weight: bold;">January 2025: </span>Paper titled href="https://arxiv.org/abs/2405.13666" 
-						target="_blank" rel="noopener noreferrer">Generalization Bounds for Dependent Data 
+					<li><span style="font-weight: bold;">January 2025: </span>Paper titled <a href="https://arxiv.org/abs/2405.13666" 
+						target="_blank" rel="noopener noreferrer"> Generalization Bounds for Dependent Data 
 						using Online-to-Batch Conversion</a>by Sagnik Chatterjee was accepted at AISTATS'25.
 					</li>
 					<li><span style="font-weight: bold;">Aug - Oct 2024: </span>Sagnik Chatterjee visited Prof. Sourav Chakraborty 
-						at ISI, Kolkata as a research intern.
+						at ISI, Kolkata as a visiting researcher.
 					</li>
 					<li><span style="font-weight: bold;">June 2024: </span>Talk by Sagnik Chatterjee at the Recent Trends in
 						Algorithms (2024) workshop on our AISTATS paper.
