Fixed a couple more typos.

--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
 					</li>
 					<li><span style="font-weight: bold;">January 2025: </span>Poster on <a
 							href="https://drive.google.com/file/d/10tU4rK2ggbF9XKFFZXzBHW95FsYiPg1A/view" target="_blank"
-							rel="noopener noreferrer">Thin-wall monopoles in a false vacuum.</a> presented by Yash Saxena 
+							rel="noopener noreferrer">Thin-wall monopoles in a false vacuum</a> presented by Yash Saxena 
 						at STRINGS 2025, NYU Abu Dhabi.
 					</li>
 					<li><span style="font-weight: bold;">January 2025: </span>Paper titled <a href="https://arxiv.org/abs/2405.13666" 
 						target="_blank" rel="noopener noreferrer"> Generalization Bounds for Dependent Data 
-						using Online-to-Batch Conversion</a>by Sagnik Chatterjee was accepted at AISTATS'25.
+						using Online-to-Batch Conversion</a> by Sagnik Chatterjee was accepted at AISTATS'25.
 					</li>
 					<li><span style="font-weight: bold;">Aug - Oct 2024: </span>Sagnik Chatterjee visited Prof. Sourav Chakraborty 
 						at ISI, Kolkata as a visiting researcher.
