--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 				</div>
 				<div class="col-5 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="image fit"><a href="https://sites.google.com/iiitd.ac.in/
-													tharrma" target="_blank" rel="noopener noreferrer"><img src="images/tharrma.jpg" alt="" /></a></span>
+						<span class="image fit"><a href="https://tharrma.github.io" target="_blank" rel="noopener noreferrer"><img src="images/tharrma.jpg" alt="" /></a></span>
 						<h3><a href="https://sites.google.com/iiitd.ac.in/
 									tharrma" target="_blank" rel="noopener noreferrer">Tharrmashastha SAPV</a></h3>
 						<!-- <h4>4<sup>th</sup> Year</h4> -->
